--- a/views/radio.haml
+++ b/views/radio.haml
@@ -1,7 +1,13 @@
-%h2 La Radio
+- link = "/articoli/"+id
 
-.nav
-  %a{ href: "/programmi" } Programmi
-  %a{ href: "/foto" } Foto
-
-%p aaa
+.article.radio
+  %h2
+    %a{ href: link }= title
+  .text
+    != haml.article_preview(text)
+  .article_infos
+    .by 
+      = published_by
+    .published_at
+      = haml.format_date(published_at)
+  .clear_left
