--- a/sass/app.sass
+++ b/sass/app.sass
@@ -54,7 +54,9 @@ a:hover
   margin: 15px 5% 40px
 
 #content_outer
-  background: rgba(255, 255, 255, 0.5)
+  background: rgba(220, 220, 220, 0.92)
+  box-shadow: 3px 2px 15px #FFF
+  border: 1px solid #ddd
   
 #header img
   opacity: 0.8
@@ -70,6 +72,7 @@ nav
     padding: 4px 10px
     +rounded
     border: 1px solid transparent
+    text-shadow: 0px 1px 2px #fff, 1px 2px 2px #222
   a:hover  
     color: #FFF
     background: #999
