--- a/views/palinsesto_article.haml
+++ b/views/palinsesto_article.haml
@@ -5,4 +5,9 @@
     %a{ href: link }= title
   .text
     != haml.article_preview(text)
+  .article_infos
+    .by 
+      = published_by
+    .published_at
+      = haml.format_date(published_at)
   .clear_left
