--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,8 @@
 %h2 RadioShout
 
+#img_gal
+  %img{ src: "http://fiveapi.com/uploads/124/gruppi_emergenti.jpg" }
+
 .fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
 
 .clear
