added box model

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -15,7 +15,12 @@
 body
   background: #eaeaea
   font-family: Georgia, Helvetica, Arial, Verdana
-  
+
+* 
+  -moz-box-sizing: border-box
+  -webkit-box-sizing: border-box
+  box-sizing: border-box
+
 button
   padding: 5px 10px
   
