--- a/views/la_radio.haml
+++ b/views/la_radio.haml
@@ -3,5 +3,8 @@
 .nav
   %a{ href: "/programmi" } Programmi
   %a{ href: "/foto" } Foto
+  %a{ href: "/palinsesto" } Palinsesto
 
-%p aaa
+.fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
+
+.clear
