--- a/sass/app.sass
+++ b/sass/app.sass
@@ -25,7 +25,8 @@ button
   
 body
   color: #111
-  background: #666
+  background: black
+  //background: #666
   //background: url('/images/background.jpg') no-repeat #444
   //background-size: cover
 
@@ -34,6 +35,10 @@ a
 a:hover
   color: #eee
   text-shadow: 1px 1px 5px #222
+
+@font-face
+  font-family: audiomat_mono
+  src: url('/fonts/audiomat_mono.ttf')
 
 #bg
   position: absolute
@@ -46,7 +51,6 @@ a:hover
   width: 100%
 
 #bg
-  margin: 100px 0 0 0
   img
     width: 100%
   
@@ -67,7 +71,7 @@ a:hover
   margin: 0 0 0 10px
 
 #header img
-  opacity: 0.95
+  opacity: 0.80
   width: 40%
   //margin: 10px 0 10px 2%
   
@@ -78,9 +82,10 @@ nav
     margin: 0 10px 0 0
     color: #000
     padding: 4px 10px
-    +rounded
+    //+rounded
     border: 1px solid transparent
     text-shadow: 0px 1px 2px #fff, 1px 2px 2px #222
+    font-family: audiomat_mono
   a:hover  
     color: #FFF
     background: #999
@@ -96,6 +101,8 @@ ul
   
 h2
   margin: 0 0 10px 0
+  font-size: 0.9em
+  font-family: audiomat_mono
   
 p
   margin: 3px 0 5px
@@ -109,16 +116,17 @@ p
 
 ul span
   color: #333
-  font-size: 0.9em
+  font-size: 1em
   font-weight: normal
 
 .article.radio  
   float: left
-  width: 24%
-  height: 300px
+  width: 26.8%
+  height: 151px
   margin: 0 0 20px 0
   overflow: hidden
   position: relative
+  margin: 15px 3% 15px 3%
   img
     width: 100%
     position: absolute
@@ -129,7 +137,9 @@ ul span
   .text
     position: absolute
     z-index: 2
-    top: 100px
+    top: 30px
+    width: 100%
+    color: transparent
     
 #stream
   background: rgba(220, 220, 220, 0.92)
@@ -143,8 +153,11 @@ ul span
   
 #img_gal
   width:  98%
-  margin-bottom: 50px
+  margin-bottom: 10px
+  //height: 300px
   height: 300px
   overflow: hidden
+  position: relative
   img
     width:  100%
+    position: absolute
