--- a/sass/app.sass
+++ b/sass/app.sass
@@ -39,6 +39,10 @@ a:hover
 @font-face
   font-family: audiomat_mono
   src: url('/fonts/audiomat_mono.ttf')
+  
+@font-face
+  font-family: lobster
+  src: url('/fonts/lobster_regular.otf')
 
 #bg
   position: absolute
@@ -53,45 +57,49 @@ a:hover
 #bg
   img
     width: 100%
+    height: 1000px
   
-#header, #content_outer
-  padding: 10px 10px 10px 10px
-  border-radius: 25px
-  margin: 0 0 0px 0
+#header
+  padding: 5px 10px 0 10px
   
 #inner_inner_container
-  margin: 15px 5% 40px
+  margin: 0 5% 40px
 
 #content_outer
-  background: rgba(220, 220, 220, 0.92)
-  box-shadow: 3px 2px 15px #FFF
-  border: 1px solid #ddd
+  padding: 15px 10px 0 10px
+  border-radius: 10px
+  background: hsla(180, 50%, 80%, 0.7)
+  box-shadow: 3px 3px 5px #FFF
+  border: 1px solid #999
+  border-top: 0
 
 #content
   margin: 0 0 0 10px
 
-#header img
-  opacity: 0.80
-  width: 40%
-  //margin: 10px 0 10px 2%
+h1 img
+  opacity: 1
+  width: 25%
+  margin: 0 0 0 10px
   
 nav
-  margin: 8px 0 30px
-  padding: 10px 0 0
+  margin: 9px 0 2px
   a
-    margin: 0 10px 0 0
+    margin: 0 2px 0 0
     color: #000
-    padding: 4px 10px
+    padding: 6px 10px 2px 
     //+rounded
-    border: 1px solid transparent
     text-shadow: 0px 1px 2px #fff, 1px 2px 2px #222
-    font-family: audiomat_mono
-  a:hover  
+    font-family: lobster
+    font-size: 1em
+    border-radius: 10px 10px 0 0 
+    background: hsla(180, 50%, 80%, 0.4)
+    border: 1px solid #999
+    border-bottom: none
+    color: white
+    
+  a:hover, a.selected
     color: #FFF
-    background: #999
-    opacity: 0.85
-    border: 1px solid #555
-    box-shadow: 1px 1px 5px #222
+    background: hsla(180, 50%, 80%, 0.7)
     
 ul
   margin: 10px 0 20px
@@ -102,8 +110,11 @@ ul
 h2
   margin: 0 0 10px 0
   font-size: 0.9em
-  font-family: audiomat_mono
-  
+  font-family: lobster
+  background: hsl(180, 100%, 20%)
+  a
+   color: white
+   padding: 0 0 0 5px
 p
   margin: 3px 0 5px
   
@@ -140,6 +151,7 @@ ul span
     top: 30px
     width: 100%
     color: transparent
+    
     
 #stream
   background: rgba(220, 220, 220, 0.92)
