--- a/views/shout_world.haml
+++ b/views/shout_world.haml
@@ -1,3 +1,5 @@
-%h2 Mondo shout
+.page.mondo_shout
 
-%p testo
+  %h2 Mondo shout
+
+  .fiveapi_element{ 'data-type': 'collection', 'data-name': "mondo_shout" }
