--- a/sass/app.sass
+++ b/sass/app.sass
@@ -31,10 +31,11 @@ body
   //background-size: cover
 
 a
-  color: #222
+  color: #FFF
 a:hover
   color: #eee
   text-shadow: 1px 1px 5px #222
+
 
 @font-face
   font-family: audiomat_mono
@@ -107,13 +108,16 @@ ul
    margin: 3px 0 5px
    font-weight: bold
   
-h2
+h2, h3
   margin: 0 0 10px 0
+  padding: 4px 6px
   font-size: 0.9em
   font-family: lobster
   background: hsl(180, 100%, 20%)
+  color: #FFF
+  font-size: 1.3em
   a
-   color: white
+   color: #FFF
    padding: 0 0 0 5px
 p
   margin: 3px 0 5px
