--- a/views/la_radio.haml
+++ b/views/la_radio.haml
@@ -1,7 +1,7 @@
 .nav
-  %a{ href: "/programmi" } Programmi
-  %a{ href: "/foto" } Foto
-  %a{ href: "/palinsesto" } Palinsesto
+  %a.btn{ href: "/programmi" } Programmi
+  %a.btn{ href: "/foto" } Foto
+  %a.btn{ href: "/palinsesto" } Palinsesto
 
 .fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
 
