--- a/views/palinsesto.haml
+++ b/views/palinsesto.haml
@@ -1,3 +1,8 @@
+.nav 
+  %a.btn{ href: "/programmi" } Programmi
+  %a.btn{ href: "/foto" } Foto
+  %a.btn{ href: "/palinsesto" } Palinsesto
+
 %h2 Palinsesto
 
 %p testo...
