--- a/views/programmi_page.haml
+++ b/views/programmi_page.haml
@@ -1,10 +1,10 @@
-.nav 
+.nav
   %a.btn{ href: "/programmi" } Programmi
   %a.btn{ href: "/foto" } Foto
   %a.btn{ href: "/palinsesto" } Palinsesto
 
-%h2 Foto
+%h2 Programmi
 
-.fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
+.fiveapi_element{ 'data-type': 'collection', 'data-name': "programmi" }
 
 .clear
