--- a/sass/app.sass
+++ b/sass/app.sass
@@ -6,6 +6,9 @@
 // this is your main css file, loaded after reset.sass feel free to delete everything and write your own styles
 
 !text_color2 = #FFF
+!bg = rgba(179, 229, 230, 0.7)
+!bg_dark = rgba(179, 229, 230, 0.3)
+!bg_headings = #066
 
 +rounded
   border-radius: 10px
@@ -69,7 +72,7 @@ a:hover
 #content_outer
   padding: 15px 10px 0 10px
   border-radius: 10px
-  background: hsla(180, 50%, 80%, 0.7)
+  background: !bg
   box-shadow: 3px 3px 5px #FFF
   border: 1px solid #999
   border-top: 0
@@ -93,14 +96,14 @@ nav
     font-family: lobster
     font-size: 1em
     border-radius: 10px 10px 0 0 
-    background: hsla(180, 50%, 80%, 0.4)
+    background: !bg_dark
     border: 1px solid #999
     border-bottom: none
     color: white
     
   a:hover, a.selected
     color: #FFF
-    background: hsla(180, 50%, 80%, 0.7)
+    background: !bg
     
 ul
   margin: 10px 0 20px
@@ -155,10 +158,19 @@ ul span
     top: 30px
     width: 100%
     color: transparent
-    
-    
+  
+.btn
+  padding: 4px 12px
+  background: !bg_headings
+  margin: 0 1% 0 0
+.btn:hover
+  background: #033
+
+.nav
+  margin: 0 0 10px
+
 #stream
-  background: rgba(220, 220, 220, 0.92)
+  background: !bg_dark
   box-shadow: 0px 0px 8px #FFF
   border-radius: 10px
   float: right
