--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
 %div
   #head
 
-    %meta{ name: "viewport", content: "width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" }
+    %meta{ name: "viewport", content: "width=device-width initial-scale=1.0 maximum-scale=1.0 minimum-scale=1.0 user-scalable=0" }
     %link{ type: "text/sass", href: "/sass/reset.sass" }
     %link{ type: "text/sass", href: "/sass/app.sass" }
   #body
