--- a/sass/app.sass
+++ b/sass/app.sass
@@ -7,6 +7,14 @@
 
 !text_color2 = #FFF
 !bg = rgba(179, 229, 230, 0.7)
+!bg_alt = rgba(255, 85, 0, 0.7)
+//!bg = !bg_alt
+
+#inner_container
+  h2, h3
+    //background: !bg_alt
+
+
 !bg_dark = rgba(179, 229, 230, 0.3)
 !bg_headings = #066
 
