added color animations in sections

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -6,7 +6,8 @@
 // this is your main css file, loaded after reset.sass feel free to delete everything and write your own styles
 
 !text_color2 = #FFF
-!bg = rgba(179, 229, 230, 0.7)
+//!bg = rgba(179, 229, 230, 0.7)
+!bg = rgba(78,  230, 173, 0.7)
 !bg_alt = rgba(255, 85, 0, 0.7)
 //!bg = !bg_alt
 
