--- a/sass/app.sass
+++ b/sass/app.sass
@@ -88,6 +88,20 @@ a:hover
 
 #content
   margin: 0 0 0 10px
+  
+.eventi img, .mondo_shout img, .chi_siamo img
+  width: 40%
+  margin: 0 1% 0 0
+  float: left
+.eventi iframe, .mondo_shout iframe, .chi_siamo iframe  
+  width: 40%
+  height: 200px
+  margin: 0 1% 0 0
+  float: left
+    
+
+footer
+  padding: 0 0 15px 0
 
 h1 img
   opacity: 1
