--- a/views/layout.haml
+++ b/views/layout.haml
@@ -34,7 +34,7 @@
                 %img{ src: "/images/logo_radioshout.png"}
             #content
               != yield
-  
+            .clear
             %footer
 
       
