--- a/sass/app.sass
+++ b/sass/app.sass
@@ -103,10 +103,17 @@ a:hover
 footer
   padding: 0 0 15px 0
 
-h1 img
+h1 img.logo
+  float: left
   opacity: 1
   width: 25%
   margin: 0 0 0 10px
+  
+#stream  
+  float: left
+  width: 30%
+  min-width: 335px
+  padding: 10px
   
 nav
   margin: 9px 0 2px
@@ -191,16 +198,6 @@ ul span
 
 .nav
   margin: 0 0 10px
-
-#stream
-  background: !bg_dark
-  box-shadow: 0px 0px 8px #FFF
-  border-radius: 10px
-  float: right
-  width: 20%
-  padding: 10px
-  .status
-    
   
 #img_gal
   width:  98%
