--- a/sass/app.sass
+++ b/sass/app.sass
@@ -99,18 +99,16 @@ a:hover
   margin: 0 1% 0 0
   float: left
     
-
 footer
   padding: 0 0 15px 0
 
 h1 img.logo
-  float: left
   opacity: 1
   width: 25%
   margin: 0 0 0 10px
   
 #stream  
-  float: left
+  float: right
   width: 30%
   min-width: 335px
   padding: 10px
