--- a/sass/app.sass
+++ b/sass/app.sass
@@ -61,16 +61,14 @@ a:hover
   position: absolute
   z-index: 1
   width: 100%
+  img
+    width: 100%
 
 #inner_container
   position: absolute
   z-index: 2
   width: 100%
 
-#bg
-  img
-    width: 100%
-    height: 1000px
   
 #header
   padding: 5px 10px 0 10px
@@ -196,7 +194,25 @@ ul span
 
 .nav
   margin: 0 0 10px
-  
+  img
+    width: 9%
+  a
+    position: relative
+    font-size: 0.7em
+    color: #000
+   
+  a:hover span
+    display: block
+  span
+    display: none
+    position: absolute
+    top: -30px
+    text-align: center
+    width: 100%
+    background: rgba(255, 255, 255, 0.7)
+    text-shadow: none
+    font-family: Verdana
+    
 #img_gal
   width:  98%
   margin-bottom: 10px
