--- a/views/foto.haml
+++ b/views/foto.haml
@@ -1,8 +1,13 @@
-.nav 
-  %a.btn{ href: "/programmi" } Programmi
-  %a.btn{ href: "/foto" } Foto
-  %a.btn{ href: "/palinsesto" } Palinsesto
-
+.nav
+  %a{ href: "/programmi" }
+    %span Programmi
+    %img{ src: "/images/icons/icon_programmi.png" }
+  %a{ href: "/foto" }
+    %span Foto
+    %img{ src: "/images/icons/icon_foto.png" }
+  %a{ href: "/palinsesto" }
+    %span Palinsesto
+    %img{ src: "/images/icons/icon_palinsesto.png" }
 %h2 Foto
 
 .fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
