--- a/views/articoli_page.haml
+++ b/views/articoli_page.haml
@@ -1,5 +1,4 @@
-.previews.mondo_shout  
-
+.previews
   .nav
     %a{ href: "/video" }
       %span Video
@@ -10,6 +9,6 @@
     %a{ href: "/articoli" }
       %span Articoli
       %img{ src: "/images/icons/icon_articoli.png" }
-
-
-  .fiveapi_element{ 'data-type': 'collection', 'data-name': "mondo_shout" }
+    
+   
+  .fiveapi_element{ 'data-type': 'collection', 'data-name': "articoli" }
