--- a/views/events.haml
+++ b/views/events.haml
@@ -1,5 +1,4 @@
-%h2 Eventi
+.previews
+  .page.full.eventi
 
-.page.full.eventi
-
-  .fiveapi_element{ 'data-type': 'collection', 'data-name': "eventi" }
+    .fiveapi_element{ 'data-type': 'collection', 'data-name': "eventi" }
