--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,7 @@
-#img_gal
-  %img{ src: "http://fiveapi.com/uploads/124/gruppi_emergenti.jpg" }
+.previews
 
-.fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
+  #img_gal
 
-.clear
+  .fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
+
+  .clear
