--- a/views/la_radio.haml
+++ b/views/la_radio.haml
@@ -9,6 +9,9 @@
     %span Palinsesto
     %img{ src: "/images/icons/icon_palinsesto.png" }
     
-.fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
+#img_gal
+
+.hidden
+  .fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
 
 .clear
