--- a/views/palinsesto.haml
+++ b/views/palinsesto.haml
@@ -11,4 +11,45 @@
 
 %h2 Palinsesto
 
-%p testo testo
+
+%table.palinsesto{ cellspacing: 0 }
+  %thead
+    %tr
+      %td 
+      %td Lunedì
+      %td Martedì
+      %td Mercoledì
+      %td Giovedì
+      %td Venerdì
+      %td Sabato
+      %td Domenica
+ 
+  %tr
+    %td 17.00-18.00
+    %td{ colspan: 7 } Musica
+  %tr
+    %td 18.00-19.00
+    %td{ colspan: 2 } Musica
+    %td Dusty Roads
+    %td L'Appartamento
+    %td{ colspan: 3 } Musica
+  %tr
+    %td 19.00-20.00
+    %td{ colspan: 7 } Musica
+  %tr
+    %td 20.00-21.00
+    %td{ colspan: 7 } Musica
+  %tr
+    %td 21.00-21.30
+    %td{ colspan: 7 } Musica
+  %tr
+    %td 21.30-18.00
+    %td{ colspan: 7 } Musica
+  %tr
+    %td 17.00-18.00
+    %td{ colspan: 7 } Musica
+
+  
+      
+
+
