--- a/views/programmi_page.haml
+++ b/views/programmi_page.haml
@@ -1,16 +1,17 @@
-.nav
-  %a{ href: "/programmi" }
-    %span Programmi
-    %img{ src: "/images/icons/icon_programmi.png" }
-  %a{ href: "/foto" }
-    %span Foto
-    %img{ src: "/images/icons/icon_foto.png" }
-  %a{ href: "/palinsesto" }
-    %span Palinsesto
-    %img{ src: "/images/icons/icon_palinsesto.png" }
+.previews
+  .nav
+    %a{ href: "/programmi" }
+      %span Programmi
+      %img{ src: "/images/icons/icon_programmi.png" }
+    %a{ href: "/foto" }
+      %span Foto
+      %img{ src: "/images/icons/icon_foto.png" }
+    %a{ href: "/palinsesto" }
+      %span Palinsesto
+      %img{ src: "/images/icons/icon_palinsesto.png" }
 
-%h2 Programmi
+  %h2 Programmi
 
-.fiveapi_element{ 'data-type': 'collection', 'data-name': "programmi" }
+  .fiveapi_element{ 'data-type': 'collection', 'data-name': "programmi" }
 
-.clear
+  .clear
