--- a/views/article.haml
+++ b/views/article.haml
@@ -1,13 +1,2 @@
-- link = "/events/"+id
-
-.article.event
-  %h2
-    %a{ href: link }= title
-  .text
-    != haml.article_preview(text)
-  .article_infos
-    .by
-      = published_by
-    .published_at
-      = haml.format_date(published_at)
-  .clear_left
+.page.article
+  .fiveapi_element{ "data-type": "article", "data-id": haml.location_article_id(location) }
