--- a/views/foto.haml
+++ b/views/foto.haml
@@ -1,15 +1,16 @@
-.nav
-  %a{ href: "/programmi" }
-    %span Programmi
-    %img{ src: "/images/icons/icon_programmi.png" }
-  %a{ href: "/foto" }
-    %span Foto
-    %img{ src: "/images/icons/icon_foto.png" }
-  %a{ href: "/palinsesto" }
-    %span Palinsesto
-    %img{ src: "/images/icons/icon_palinsesto.png" }
-%h2 Foto
+.previews
+  .nav
+    %a{ href: "/programmi" }
+      %span Programmi
+      %img{ src: "/images/icons/icon_programmi.png" }
+    %a{ href: "/foto" }
+      %span Foto
+      %img{ src: "/images/icons/icon_foto.png" }
+    %a{ href: "/palinsesto" }
+      %span Palinsesto
+      %img{ src: "/images/icons/icon_palinsesto.png" }
+  %h2 Foto
 
-.fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
+  .fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
 
-.clear
+  .clear
