changed player and gallery

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -114,6 +114,9 @@ h1 img.logo
   width: 30%
   min-width: 335px
   padding: 10px
+  .status
+    float: right
+  
   
 nav
   margin: 9px 0 2px
@@ -239,6 +242,33 @@ ul span
   img
     width:  100%
     position: absolute
+    
+    
+#img_gal  
+  position: relative
+  overflow: hidden
+  .caption
+    position: absolute
+    font-family: bebas_neue 
+    color: #FFF
+    padding: 10px
+    background: #555
+    opacity: 0.8
+    width: 35.5%
+    font-size: 1.5em
+    z-index: 4
+  img 
+    position: absolute
+    width: 100%
+    -webkit-transition-property: opacity
+    -webkit-transition-duration: 1s
+    -webkit-transition-timing-function: ease-in-out
+    -moz-transition-property: opacity
+    -moz-transition-duration: 1s
+    -moz-transition-timing-function: ease-in-out
+    opacity: 0
+  img:first-child
+    opacity: 1    
     
 .page.article
   img
