--- a/views/chi_siamo_page.haml
+++ b/views/chi_siamo_page.haml
@@ -1,5 +1,10 @@
 .page.full.chi_siamo
-
+  
+  .subnav
+    %a.btn{ href: "/arci" } Arci
+    %a.btn{ href: "/collabs" } Collaborazioni
+  .clear
+  
   .fiveapi_element{ 'data-type': 'collection', 'data-name': "chi_siamo" }
 
   .clear
