--- a/sass/app.sass
+++ b/sass/app.sass
@@ -65,6 +65,7 @@ a:hover
   position: absolute
   z-index: 1
   width: 100%
+  min-width: 450px
   img
     width: 100%
 
@@ -72,6 +73,7 @@ a:hover
   position: absolute
   z-index: 2
   width: 100%
+  min-width: 450px
 
   
 #header
@@ -231,6 +233,9 @@ ul span
     background: rgba(255, 255, 255, 0.7)
     text-shadow: none
     font-family: Verdana
+
+.subnav
+  margin: 5px 0 10px 0 
     
 #img_gal
   width:  98%
