--- a/views/foto.haml
+++ b/views/foto.haml
@@ -1,16 +1,11 @@
-.previews
-  .nav
-    %a{ href: "/programmi" }
-      %span Programmi
-      %img{ src: "/images/icons/icon_programmi.png" }
-    %a{ href: "/foto" }
-      %span Foto
-      %img{ src: "/images/icons/icon_foto.png" }
-    %a{ href: "/palinsesto" }
-      %span Palinsesto
-      %img{ src: "/images/icons/icon_palinsesto.png" }
-  %h2 Foto
+- link = "/foto/"+id+"-"+name_url
 
-  .fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
-
-  .clear
+.foto.article
+  %h2
+    %a{ href: link }
+      %span.date
+        = haml.format_date(published_at)
+        = "-"
+      = title
+  .text
+    != text
