--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,6 +19,7 @@
                 %a{ href: "/eventi" } 		  Eventi
                 %a{ href: "/shout_world" } 	Mondo Shout
                 %a{ href: "/chi_siamo" } 	  Chi Siamo
+                %a{ href: "/arci" } 	      Arci
               .clear
               #fiveapi_message
               #fiveapi
