--- a/views/chi_siamo_page.haml
+++ b/views/chi_siamo_page.haml
@@ -1,7 +1,7 @@
 .page.full.chi_siamo
   
   .subnav
-    %a.btn{ href: "/arci" } Arci
+    %a.btn{ href: "/staff" } Staff
     %a.btn{ href: "/collabs" } Collaborazioni
   .clear
   
