--- a/views/photo.haml
+++ b/views/photo.haml
@@ -1,2 +1,6 @@
 .page.article
+
+  .back
+    %a.btn{ href: "/foto" } < foto
+    
   .fiveapi_element{ "data-type": "article", "data-id": haml.location_article_id(location) }
