--- a/views/shout_world.haml
+++ b/views/shout_world.haml
@@ -12,4 +12,6 @@
       %img{ src: "/images/icons/icon_articoli.png" }
 
 
-  .fiveapi_element{ 'data-type': 'collection', 'data-name': "mondo_shout" }
+  .fiveapi_element{ 'data-type': 'collection', 'data-name': "video" }
+  .fiveapi_element{ 'data-type': 'collection', 'data-name': "audio" }
+  .fiveapi_element{ 'data-type': 'collection', 'data-name': "articoli" }
