--- a/views/article.haml
+++ b/views/article.haml
@@ -1,2 +1,6 @@
 .page.article
+
+.back
+  %a.btn{ href: "/articoli" } < articoli
+  
   .fiveapi_element{ "data-type": "article", "data-id": haml.location_article_id(location) }
