--- a/views/staff.haml
+++ b/views/staff.haml
@@ -1,111 +1,112 @@
 .staff
   .md
-    **Presidente**
+    :preserve
+      **Presidente**
 
-    Stefano Magherini
+      Stefano Magherini
 
-    **Aspetti burocratici**
+      **Aspetti burocratici**
 
-    Flora Braschi, Latini Cosimo, Niccolò Lanzoni
+      Flora Braschi, Latini Cosimo, Niccolò Lanzoni
 
-    **Responsabile Arci**
+      **Responsabile Arci**
 
-    Michele Sacco, Matteo Materassi, Cosimo Latini
+      Michele Sacco, Matteo Materassi, Cosimo Latini
 
-    **Tesoreria**
+      **Tesoreria**
 
-    Flora Braschi
+      Flora Braschi
 
-    **Gruppi Emergenti**
+      **Gruppi Emergenti**
 
-    Tommaso Bonaiuti
+      Tommaso Bonaiuti
 
-    **Grafico**
+      **Grafico**
 
-    Tommaso Dallai  &   Niccolò Gambassi
+      Tommaso Dallai  &   Niccolò Gambassi
 
-    **Programmatore**
+      **Programmatore**
 
-    Riccardo Schillaci
+      Riccardo Schillaci
 
-    **REDAZIONE**
+      **REDAZIONE**
 
-    \(musica) Michele Kruisinga
+      \(musica) Michele Kruisinga
 
-    \(arte e spettacolo) Niccolò Gambassi
+      \(arte e spettacolo) Niccolò Gambassi
 
-    \(attualità) Gianluca Fiorindi
+      \(attualità) Gianluca Fiorindi
 
-    \(eventi e pubblicità) Niccolò Bonaiuti
+      \(eventi e pubblicità) Niccolò Bonaiuti
 
-    \(sito web) Riccardo Schillaci
-
-
-
-    **GRUPPO MUSICA**
-
-    Elena Raugei
-
-    Stefano Magherini
-
-    Filippo Rocchi
-
-    Giacomo Gandossi
-
-    Michele Kruisinga
-
-    Tommaso Dettori
-
-
-    **GRUPPO ARTE & SPETTACOLI**
-
-    Niccolò Gambassi
-
-    Tommaso Dallai
-
-    Eleonora Belpassi
-
-    Gianluca Fiorindi
-
-    Erik Haglund
-
-    Claudia Angelini 	 
-
-
-    **GRUPPO ATTUALITA'**
-
-    Cosimo Renzi
-
-    Niccolò Lanzoni
-
-    Flora Braschi
-
-
-    **GRUPPO EVENTI**
-
-    Niccolò Bonaiuti
-
-    Cosimo Bartoli
-
-    Tommaso Martelli
-
-    Niccolò Gamabassi
-
-    Tommaso Dallai
-
-
-    **GRUPPO SITO**
-
-    Riccardo Schillaci
-
-    Lapo Nocentini
-
-    Filippo Rocchi
-
-    Gianluca Fiorindi
+      \(sito web) Riccardo Schillaci
 
 
 
-    **RESPONSABILE ARCI**
+      **GRUPPO MUSICA**
 
-    Michele Sacco
+      Elena Raugei
+
+      Stefano Magherini
+
+      Filippo Rocchi
+
+      Giacomo Gandossi
+
+      Michele Kruisinga
+
+      Tommaso Dettori
+
+
+      **GRUPPO ARTE & SPETTACOLI**
+
+      Niccolò Gambassi
+
+      Tommaso Dallai
+
+      Eleonora Belpassi
+
+      Gianluca Fiorindi
+
+      Erik Haglund
+
+      Claudia Angelini 	 
+
+
+      **GRUPPO ATTUALITA'**
+
+      Cosimo Renzi
+
+      Niccolò Lanzoni
+
+      Flora Braschi
+
+
+      **GRUPPO EVENTI**
+
+      Niccolò Bonaiuti
+
+      Cosimo Bartoli
+
+      Tommaso Martelli
+
+      Niccolò Gamabassi
+
+      Tommaso Dallai
+
+
+      **GRUPPO SITO**
+
+      Riccardo Schillaci
+
+      Lapo Nocentini
+
+      Filippo Rocchi
+
+      Gianluca Fiorindi
+
+
+
+      **RESPONSABILE ARCI**
+
+      Michele Sacco
