--- a/sass/app.sass
+++ b/sass/app.sass
@@ -118,7 +118,13 @@ h1 img.logo
   padding: 10px
   .status
     float: right
-  
+    
+.share
+  float: right
+  a
+    display: block
+  img.icon
+    width: 25px
   
 nav
   margin: 9px 0 2px
@@ -180,7 +186,13 @@ ul span
     font-size: 85%
     font-family: Verdana, Helvetica, sans-serif
     letter-spacing: -0.5px
-    
+
+.text
+  a
+    color: #000
+  a:hover
+    color: #FFF
+
 .previews
   .article 
     float: left
@@ -203,7 +215,8 @@ ul span
       top: 30px
       width: 100%
       color: transparent
-  
+
+
 .btn
   padding: 4px 12px
   background: !bg_headings
@@ -212,6 +225,7 @@ ul span
   background: #033
 .back
   margin: 0 0 10px 0
+  font-size: 0.8em
 
 .nav
   margin: 0 0 10px
