--- a/views/arci.haml
+++ b/views/arci.haml
@@ -1,3 +1,9 @@
-%h2 Arci
+.arci
+  %h2 Arci
 
-%p testo...
+  .text
+    %p 
+      Testo introduttivo...
+  
+      Sito:
+      %a{ href: "http://arcifirenze.it" } arcifirenze.it
