--- a/views/audio_page.haml
+++ b/views/audio_page.haml
@@ -3,7 +3,7 @@
     %span Video
     %img{ src: "/images/icons/icon_video.png" }
   %a{ href: "/audio" }
-    %span Audio
+    %span Interviste
     %img{ src: "/images/icons/icon_audio.png" }
   %a{ href: "/articoli" }
     %span Articoli
