--- a/views/event.haml
+++ b/views/event.haml
@@ -1,2 +1,6 @@
 .page.event
+
+  .back
+    %a.btn{ href: "/eventi" } < eventi
+
   .fiveapi_element{ "data-type": "article", "data-id": haml.location_article_id(location) }
