--- a/views/la_radio.haml
+++ b/views/la_radio.haml
@@ -8,6 +8,9 @@
   %a{ href: "/palinsesto" }
     %span Palinsesto
     %img{ src: "/images/icons/icon_palinsesto.png" }
+  %a{ href: "/podcasts" }
+    %span Podcast
+    %img{ src: "/images/icons/icon_audio.png" }
     
 #img_gal
 
