--- a/views/podcast.haml
+++ b/views/podcast.haml
@@ -1,6 +1,6 @@
-.page.article
+.page.podcast
 
   .back
-    %a.btn{ href: "/articoli" } < articoli
+    %a.btn{ href: "/podcasts" } < podcast
   
   .fiveapi_element{ "data-type": "article", "data-id": haml.location_article_id(location) }
