--- a/views/podcast_page.haml
+++ b/views/podcast_page.haml
@@ -1,4 +1,4 @@
-.previews
+.podcast.previews
   .nav
     %a{ href: "/programmi" }
       %span Programmi
@@ -12,8 +12,9 @@
     %a{ href: "/podcasts" }
       %span Podcast
       %img{ src: "/images/icons/icon_audio.png" }
-  %h2 Foto
 
-  .fiveapi_element{ 'data-type': 'collection', 'data-name': "foto" }
+  %h2 Podcast
+
+  .fiveapi_element{ 'data-type': 'collection', 'data-name': "podcasts" }
 
   .clear
