--- a/views/programmi_page.haml
+++ b/views/programmi_page.haml
@@ -9,6 +9,9 @@
     %a{ href: "/palinsesto" }
       %span Palinsesto
       %img{ src: "/images/icons/icon_palinsesto.png" }
+    %a{ href: "/podcasts" }
+      %span Podcast
+      %img{ src: "/images/icons/icon_audio.png" }
 
   %h2 Programmi
 
