--- a/views/video_single.haml
+++ b/views/video_single.haml
@@ -1,6 +1,6 @@
-.page.article
+.page.video
 
   .back
-    %a.btn{ href: "/articoli" } < articoli
+    %a.btn{ href: "/video" } < video
   
   .fiveapi_element{ "data-type": "article", "data-id": haml.location_article_id(location) }
