--- a/views/audio_single.haml
+++ b/views/audio_single.haml
@@ -1,6 +1,6 @@
-.page.article
+.page.audio
 
   .back
-    %a.btn{ href: "/articoli" } < articoli
+    %a.btn{ href: "/audio" } < audio
   
   .fiveapi_element{ "data-type": "article", "data-id": haml.location_article_id(location) }
