added audio player

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -304,3 +304,14 @@ table.palinsesto
 
 .hidden
   display:  none
+  
+.audio_btns
+  font-weight: bold
+  font-family: Verdana, Arial 
+  font-size: 1.1em
+  padding:  12px 2px
+  color: #FFF
+  background: rgba(108, 59, 0, 0.898438)
+  width: 40px
+  text-align: center
+  border-radius: 8px
