--- a/views/collabs.haml
+++ b/views/collabs.haml
@@ -4,5 +4,4 @@
     %a.btn{ href: "/chi_siamo" } < chi siamo
   
   %h2 Collaborazioni
-
-  %p GLUE, FLOG, NUOVO CAMARILLO, ARCI FIRENZE, http://eleonorabelpassi.wordpress.com/author/eleomora/ (BLOG), RIOTVAN 
+  .markdown{ "data-name": "collabs" }
