--- a/sass/app.sass
+++ b/sass/app.sass
@@ -17,7 +17,7 @@
 
 
 !bg_dark = rgba(179, 229, 230, 0.3)
-!bg_headings = #066
+
 
 +rounded
   border-radius: 10px
@@ -85,7 +85,7 @@ a:hover
 #content_outer
   padding: 15px 10px 0 10px
   border-radius: 10px
-  background: !bg
+  //background: !bg
   box-shadow: 3px 3px 5px #FFF
   border: 1px solid #999
   border-top: 0
@@ -157,7 +157,7 @@ h2, h3
   padding: 4px 6px
   font-size: 0.9em
   font-family: lobster
-  background: hsl(180, 100%, 20%)
+  //background: hsl(180, 100%, 20%)
   color: #FFF
   font-size: 1.05em
   overflow: hidden
@@ -182,6 +182,8 @@ ul span
   font-weight: normal
 
 .article
+  img
+    width: 40%
   .text
     font-size: 85%
     font-family: Verdana, Helvetica, sans-serif
@@ -219,10 +221,10 @@ ul span
 
 .btn
   padding: 4px 12px
-  background: !bg_headings
+  background: #555
   margin: 0 1% 0 0
 .btn:hover
-  background: #033
+  background: #111
 .back
   margin: 0 0 10px 0
   font-size: 0.8em
