--- a/sass/app.sass
+++ b/sass/app.sass
@@ -61,20 +61,24 @@ a:hover
   font-family: lobster
   src: url('/fonts/lobster_regular.otf')
 
+!min-width: 480px
+
 #bg
   position: absolute
-  z-index: 1
+  top: 0 
+  z-index: -1
   width: 100%
-  min-width: 450px
+  min-width: !min-width
   img
     width: 100%
 
 #inner_container
-  position: absolute
-  z-index: 2
-  width: 100%
-  min-width: 450px
+  margin: 0 auto
+  max-width: 1200px
 
+#inner_inner_container  
+  min-width: !min-width
+  margin: 0 auto
   
 #header
   padding: 5px 10px 0 10px
@@ -184,10 +188,23 @@ ul span
 .article
   img
     width: 40%
+    clear: left
+    padding: 0 0 10px 0
   .text
+    width: 100%
     font-size: 85%
     font-family: Verdana, Helvetica, sans-serif
     letter-spacing: -0.5px
+    a
+      color: #000
+    a:hover
+      color: #FFF
+  iframe
+    width: 45%
+    height: 250px
+    clear: left
+.fiveapi_element[data-type='collection'] .article iframe
+  width: 100%
 
 .text
   a
@@ -294,8 +311,16 @@ ul span
 .page.article
   img
     margin: 0 15px 0 0px
-  img, .text
+  img
     float: left
+    
+
+.foto.article
+  img
+    width: 80%
+    margin: 10px auto
+    float: none 
+    display: block
     
 table.palinsesto
   margin: 20px
