--- a/views/foto_article.haml
+++ b/views/foto_article.haml
@@ -1,8 +1,8 @@
 
 - link = "/foto/"+id
 
-.article.event
-%h2
-  %a{ href: link }= title
-.text
-  != haml.article_preview(text)
+.article.foto
+  %h2
+    %a{ href: link }= title
+  .text
+    != text
