--- a/sass/app.sass
+++ b/sass/app.sass
@@ -189,7 +189,8 @@ ul span
   img
     width: 40%
     clear: left
-    padding: 0 0 10px 0
+    float: left
+    padding: 0 1.5% 10px 0
   .text
     width: 100%
     font-size: 85%
@@ -204,6 +205,9 @@ ul span
     height: 250px
     clear: left
 .fiveapi_element[data-type='collection'] .article iframe
+  width: 100%
+
+.img_box
   width: 100%
 
 .text
