fixed photos css

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -318,13 +318,16 @@ ul span
   img
     float: left
     
-
 .foto.article
   img
     width: 80%
     margin: 10px auto
     float: none 
     display: block
+    
+.fiveapi_element[data-type='collection'] .foto.article img
+  width: 100%
+  margin: 0
     
 table.palinsesto
   margin: 20px
