--- a/views/video_page.haml
+++ b/views/video_page.haml
@@ -1,14 +1,16 @@
-.nav
-  %a{ href: "/video" }
-    %span Video
-    %img{ src: "/images/icons/icon_video.png" }
-  %a{ href: "/audio" }
-    %span Interviste
-    %img{ src: "/images/icons/icon_audio.png" }
-  %a{ href: "/articoli" }
-    %span Articoli
-    %img{ src: "/images/icons/icon_articoli.png" }
+.videos
+
+  .nav
+    %a{ href: "/video" }
+      %span Video
+      %img{ src: "/images/icons/icon_video.png" }
+    %a{ href: "/audio" }
+      %span Interviste
+      %img{ src: "/images/icons/icon_audio.png" }
+    %a{ href: "/articoli" }
+      %span Articoli
+      %img{ src: "/images/icons/icon_articoli.png" }
     
-.fiveapi_element{ 'data-type': 'collection', 'data-name': "video" }
+  .fiveapi_element{ 'data-type': 'collection', 'data-name': "video" }
     
     
