--- a/sass/app.sass
+++ b/sass/app.sass
@@ -325,6 +325,15 @@ ul span
     float: none 
     display: block
     
+.videos .article  
+  margin: 0 0 20px 0
+  iframe
+    max-width: 700px
+    height: 350px
+    margin: 0 auto
+    float: none
+    display: block
+    
 .fiveapi_element[data-type='collection'] .foto.article img
   width: 100%
   margin: 0
