--- a/sass/app.sass
+++ b/sass/app.sass
@@ -1,4 +1,4 @@
-// TODO: add variables into mixins on sass-js 
+// TODO: add variables into mixins on sass-js
 +gradient(!start, !end)
   background-image: -webkit-linear-gradient(!start, !end)
   background: !start
@@ -25,20 +25,20 @@
   -moz-border-radius: 10px
 
 body
-  font-family: Verdana, Georgia, Helvetica, Arial 
+  font-family: Verdana, Georgia, Helvetica, Arial
   font-size: 100%
 
-* 
+*
   -moz-box-sizing: border-box
   -webkit-box-sizing: border-box
   box-sizing: border-box
-  
+
 strong
   font-weight: bold
 
 button
   padding: 5px 10px
-  
+
 body
   color: #111
   background: black
@@ -56,16 +56,16 @@ a:hover
 @font-face
   font-family: audiomat_mono
   src: url('/fonts/audiomat_mono.ttf')
-  
+
 @font-face
   font-family: lobster
-  src: url('/fonts/lobster_regular.otf')
+  src: url('/fonts/denne_freakshow.ttf')
 
 !min-width: 480px
 
 #bg
   position: absolute
-  top: 0 
+  top: 0
   z-index: -1
   width: 100%
   min-width: !min-width
@@ -76,13 +76,13 @@ a:hover
   margin: 0 auto
   max-width: 1200px
 
-#inner_inner_container  
+#inner_inner_container
   min-width: !min-width
   margin: 0 auto
-  
+
 #header
   padding: 5px 10px 0 10px
-  
+
 #inner_inner_container
   margin: 0 5% 40px
 
@@ -96,17 +96,17 @@ a:hover
 
 #content
   margin: 0 0 0 10px
-  
+
 .eventi img, .chi_siamo img
   width: 40%
   margin: 0 1% 0 0
   float: left
-.eventi iframe, .chi_siamo iframe  
+.eventi iframe, .chi_siamo iframe
   width: 40%
   height: 200px
   margin: 0 1% 0 0
   float: left
-    
+
 footer
   padding: 0 0 15px 0
 
@@ -114,48 +114,48 @@ h1 img.logo
   opacity: 1
   width: 25%
   margin: 0 0 0 10px
-  
-#stream  
+
+#stream
   float: right
   width: 30%
   min-width: 335px
   padding: 10px
   .status
     float: right
-    
+
 .share
   float: right
   a
     display: block
   img.icon
     width: 25px
-  
+
 nav
   margin: 9px 0 2px
   a
     margin: 0 2px 0 0
     color: #000
-    padding: 6px 10px 2px 
+    padding: 6px 10px 2px
     //+rounded
     text-shadow: 0px 1px 2px #fff, 1px 2px 2px #222
     font-family: lobster
     font-size: 1em
-    border-radius: 10px 10px 0 0 
+    border-radius: 10px 10px 0 0
     background: !bg_dark
     border: 1px solid #999
     border-bottom: none
     color: white
-    
+
   a:hover, a.selected
     color: #FFF
     background: !bg
-    
+
 ul
   margin: 10px 0 20px
   li
    margin: 3px 0 5px
    font-weight: bold
-  
+
 h2, h3
   margin: 0 0 10px 0
   padding: 4px 6px
@@ -172,8 +172,8 @@ h2, h3
    padding: 0 0 0 5px
 p
   margin: 3px 0 5px
-  
-  
+
+
 .box
   color: !text_color2
   padding: 2px 9px
@@ -217,7 +217,7 @@ ul span
     color: #FFF
 
 .previews
-  .article 
+  .article
     float: left
     width: 26.8%
     height: 151px
@@ -258,7 +258,7 @@ ul span
     position: relative
     font-size: 0.5em
     color: #000
-   
+
   a:hover span
     display: block
   span
@@ -272,8 +272,8 @@ ul span
     font-family: Verdana
 
 .subnav
-  margin: 5px 0 10px 0 
-    
+  margin: 5px 0 10px 0
+
 #img_gal
   width:  98%
   margin-bottom: 10px
@@ -284,14 +284,14 @@ ul span
   img
     width:  100%
     position: absolute
-    
-    
-#img_gal  
+
+
+#img_gal
   position: relative
   overflow: hidden
   .caption
     position: absolute
-    font-family: bebas_neue 
+    font-family: bebas_neue
     color: #FFF
     padding: 10px
     background: #555
@@ -299,7 +299,7 @@ ul span
     width: 35.5%
     font-size: 1.5em
     z-index: 4
-  img 
+  img
     position: absolute
     width: 100%
     -webkit-transition-property: opacity
@@ -310,22 +310,22 @@ ul span
     -moz-transition-timing-function: ease-in-out
     opacity: 0
   img:first-child
-    opacity: 1    
-    
+    opacity: 1
+
 .page.article
   img
     margin: 0 15px 0 0px
   img
     float: left
-    
+
 .foto.article
   img
     width: 80%
     margin: 10px auto
-    float: none 
+    float: none
     display: block
-    
-.videos .article  
+
+.videos .article
   margin: 0 0 20px 0
   iframe
     max-width: 700px
@@ -333,11 +333,11 @@ ul span
     margin: 0 auto
     float: none
     display: block
-    
+
 .fiveapi_element[data-type='collection'] .foto.article img
   width: 100%
   margin: 0
-    
+
 table.palinsesto
   margin: 20px
   border: 1px solid #DDD
@@ -347,10 +347,10 @@ table.palinsesto
 
 .hidden
   display:  none
-  
+
 .audio_btns
   font-weight: bold
-  font-family: Verdana, Arial 
+  font-family: Verdana, Arial
   font-size: 1.1em
   padding:  12px 2px
   color: #FFF
