--- a/views/arci.haml
+++ b/views/arci.haml
@@ -1,9 +1,2 @@
 .arci
-  %h2 Arci
-
-  .text
-    %p 
-      Testo introduttivo...
-  
-      Sito:
-      %a{ href: "http://arcifirenze.it" } arcifirenze.it
+  .fiveapi_element{ "data-type": "article", "data-id": "310" }
