--- a/views/palinsesto.haml
+++ b/views/palinsesto.haml
@@ -18,7 +18,7 @@
 %table.palinsesto{ cellspacing: 0 }
   %thead
     %tr
-      %td 
+      %td
       %td Lunedì
       %td Martedì
       %td Mercoledì
@@ -26,33 +26,84 @@
       %td Venerdì
       %td Sabato
       %td Domenica
- 
+
+  %tr
+    %td 16.00-17.00
+    %td Musica
+    %td Musica
+    %td Musica
+    %td
+      %a{ href: "#" } Radio Noise
+    %td Musica
+    %td Musica
+    %td Musica
   %tr
     %td 17.00-18.00
-    %td{ colspan: 7 } Musica
+    %td Musica
+    %td Musica
+    %td Musica
+    %td Musica
+    %td
+      %a{ href: "#" } I Soliti Sospetti
+    %td Musica
+    %td Musica
   %tr
     %td 18.00-19.00
-    %td{ colspan: 2 } Musica
-    %td Dusty Roads
-    %td L'Appartamento
-    %td{ colspan: 3 } Musica
+    %td FEBBRE A 90°
+    %td TheMentiS
+    %td Musica
+    %td DEBUGGING ART
+    %td IT'ONLY ROCK
+    %td Musica
+    %td Musica
   %tr
     %td 19.00-20.00
-    %td{ colspan: 7 } Musica
+    %td Musica
+    %td Musica
+    %td Musica
+    %td IL GARAGE ERMETICO
+    %td Musica
+    %td Il Confine
+    %td Musica
   %tr
     %td 20.00-21.00
-    %td{ colspan: 7 } Musica
+    %td Musica
+    %td Il Garage Ermetico
+    %td Musica
+    %td Musica
+    %td Musica
+    %td Il Confine
+    %td Musica
   %tr
     %td 21.00-21.30
     %td{ colspan: 7 } Musica
+    %td Musica
+    %td Indigestion 2.0
+    %td Musica
+    %td Musica
+    %td Musica
+    %td Il Confine
+    %td Musica
   %tr
-    %td 21.30-18.00
-    %td{ colspan: 7 } Musica
+    %td 21.30-22.30
+    %td ROLLOVER DJ	 
+    %td BLUESNITE  SHOUT (dalle ore 22.00)	
+    %td ANDY'S TEAM	
+    %td BEAT FIGHTER	
+    %td RADIOLIVE	
+    %td Il Confine
+    %td Musica
   %tr
-    %td 17.00-18.00
-    %td{ colspan: 7 } Musica
+    %td 22.30-23.30
+    %td BassisLand
+    %td Musica
+    %td Blues Nite Shout
+    %td Musica
+    %td Musica
+    %td Musica
+    %td Musica
 
-  
-      
+
+
 
 
