--- a/sass/app.sass
+++ b/sass/app.sass
@@ -253,18 +253,19 @@ ul span
 .nav
   margin: 0 0 10px
   img
-    width: 6%
+    width: 7%
   a
     position: relative
     font-size: 0.5em
     color: #000
+    margin: 0 0.5%
 
   a:hover span
     display: block
   span
     display: none
     position: absolute
-    top: -30px
+    top: -20px
     text-align: center
     width: 100%
     background: rgba(255, 255, 255, 0.7)
@@ -334,16 +335,24 @@ ul span
     float: none
     display: block
 
+.article iframe
+  margin: 0 auto
+  display: block
+
 .fiveapi_element[data-type='collection'] .foto.article img
   width: 100%
   margin: 0
 
 table.palinsesto
-  margin: 20px
-  border: 1px solid #DDD
+  margin: 10px 0
+  width: 100%
+  background: rgba(255, 255, 255, 0.3)
+  // border: 1px solid #DDD
+  border: 0
+  padding: 1%
   td
     padding: 3px
-    border: 1px solid #DDD
+    // border: 1px solid #DDD
 
 .hidden
   display:  none
