--- a/sass/app.sass
+++ b/sass/app.sass
@@ -347,12 +347,19 @@ table.palinsesto
   margin: 10px 0
   width: 100%
   background: rgba(255, 255, 255, 0.3)
-  // border: 1px solid #DDD
   border: 0
   padding: 1%
+  thead td
+    font-weight: bold
+  tbody td:first-child
+    font-weight: bold
   td
-    padding: 3px
-    // border: 1px solid #DDD
+    padding: 6px 3px 3px 3px
+    border-bottom: 1px solid #eee
+    width: 12.5%
+  tbody tr:last-child td
+    border-bottom: 0
+
 
 .hidden
   display:  none
