--- a/views/palinsesto.haml
+++ b/views/palinsesto.haml
@@ -33,7 +33,7 @@
     %td Musica
     %td Musica
     %td
-      %a{ href: "#" } Radio Noise
+      %a{ href: "javascript:void(0)" } Radio Noise
     %td Musica
     %td Musica
     %td Musica
@@ -44,16 +44,20 @@
     %td Musica
     %td Musica
     %td
-      %a{ href: "#" } I Soliti Sospetti
+      %a{ href: "javascript:void(0)" } I Soliti Sospetti
     %td Musica
     %td Musica
   %tr
     %td 18.00-19.00
-    %td FEBBRE A 90°
-    %td TheMentiS
+    %td
+      %a{ href: "javascript:void(0)" } FEBBRE A 90°
+    %td
+      %a{ href: "javascript:void(0)" } TheMentiS
     %td Musica
-    %td DEBUGGING ART
-    %td IT'ONLY ROCK
+    %td
+      %a{ href: "javascript:void(0)" } DEBUGGING ART
+    %td
+      %a{ href: "javascript:void(0)" } IT'ONLY ROCK
     %td Musica
     %td Musica
   %tr
@@ -61,43 +65,56 @@
     %td Musica
     %td Musica
     %td Musica
-    %td IL GARAGE ERMETICO
+    %td
+      %a{ href: "javascript:void(0)" } IL GARAGE ERMETICO
     %td Musica
-    %td Il Confine
+    %td
+      %a{ href: "javascript:void(0)" } Il Confine
     %td Musica
   %tr
     %td 20.00-21.00
     %td Musica
-    %td Il Garage Ermetico
+    %td
+      %a{ href: "javascript:void(0)" } Il Garage Ermetico
     %td Musica
     %td Musica
     %td Musica
-    %td Il Confine
+    %td
+      %a{ href: "javascript:void(0)" } Il Confine
     %td Musica
   %tr
     %td 21.00-21.30
-    %td{ colspan: 7 } Musica
     %td Musica
-    %td Indigestion 2.0
+    %td
+      %a{ href: "javascript:void(0)" } Indigestion 2.0
     %td Musica
     %td Musica
     %td Musica
-    %td Il Confine
+    %td
+      %a{ href: "javascript:void(0)" } Il Confine
     %td Musica
   %tr
     %td 21.30-22.30
-    %td ROLLOVER DJ	 
-    %td BLUESNITE  SHOUT (dalle ore 22.00)	
-    %td ANDY'S TEAM	
-    %td BEAT FIGHTER	
-    %td RADIOLIVE	
-    %td Il Confine
+    %td
+      %a{ href: "javascript:void(0)" } ROLLOVER DJ
+    %td
+      %a{ href: "javascript:void(0)" } BLUESNITE  SHOUT (dalle ore 22.00)
+    %td
+      %a{ href: "javascript:void(0)" } ANDY'S TEAM
+    %td
+      %a{ href: "javascript:void(0)" } BEAT FIGHTER
+    %td
+      %a{ href: "javascript:void(0)" } RADIOLIVE
+    %td
+      %a{ href: "javascript:void(0)" } Il Confine
     %td Musica
   %tr
     %td 22.30-23.30
-    %td BassisLand
+    %td
+      %a{ href: "javascript:void(0)" } BassisLand
     %td Musica
-    %td Blues Nite Shout
+    %td
+      %a{ href: "javascript:void(0)" } Blues Nite Shout
     %td Musica
     %td Musica
     %td Musica
