some css, coffee and markdown

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -256,9 +256,11 @@ ul span
     width: 100%
   a
     width: 7%
+    min-width: 50px
+    max-width: 110px
     display: inline-block
     position: relative
-    font-size: 0.75em
+    font-size: 0.65em
     text-transform: uppercase
     color: #000
     margin: 0 0.5%
@@ -335,6 +337,12 @@ ul span
     margin: 0 auto
     float: none
     display: block
+
+.video.page
+  iframe
+    min-width: 500px
+    width: 73%
+    height: 410px
 
 .article iframe
   margin: 0 auto
