--- a/views/staff.haml
+++ b/views/staff.haml
@@ -3,5 +3,4 @@
   .back
     %a.btn{ href: "/chi_siamo" } < chi siamo
 
-  %h2 Staff
-  .markdown{ "data-name": "staff" }
+  .fiveapi_element{ "data-type": "article", "data-id": "350" }
