--- a/views/collabs.haml
+++ b/views/collabs.haml
@@ -3,5 +3,4 @@
   .back
     %a.btn{ href: "/chi_siamo" } < chi siamo
   
-  %h2 Collaborazioni
-  .markdown{ "data-name": "collabs" }
+  .fiveapi_element{ "data-type": "article", "data-id": "351" }
