update chi siamo etc

--- a/views/chi_siamo_page.haml
+++ b/views/chi_siamo_page.haml
@@ -5,6 +5,6 @@
     %a.btn{ href: "/collabs" } Collaborazioni
   .clear
   
-  .fiveapi_element{ 'data-type': 'collection', 'data-name': "chi_siamo" }
+  .fiveapi_element{ 'data-type': 'article', 'data-id': "352" }
 
   .clear
