--- a/sass/app.sass
+++ b/sass/app.sass
@@ -207,6 +207,7 @@ ul span
 .fiveapi_element[data-type='collection'] .article iframe
   width: 100%
 
+
 .img_box
   width: 100%
 
@@ -237,8 +238,9 @@ ul span
       z-index: 2
       top: 30px
       width: 100%
-      color: transparent
-
+  //  color: transparent
+  //.article.articolo .text
+  // color: #000
 
 .btn
   padding: 4px 12px
