--- a/views/programmi_page.haml
+++ b/views/programmi_page.haml
@@ -13,6 +13,9 @@
       %span Podcast
       %img{ src: "/images/icons/icon_audio.png" }
 
+    %a.right{ href: "https://www.facebook.com/pages/RadioShout/137967656273296?sk=photos_stream" }
+      %span Foto FB
+      %img{ src: "/images/icons/icon_foto.png" }
   %h2 Programmi
 
   .fiveapi_element{ 'data-type': 'collection', 'data-name': "programmi" }
