--- a/sass/app.sass
+++ b/sass/app.sass
@@ -24,6 +24,11 @@
   -webkit-border-radius: 10px
   -moz-border-radius: 10px
 
+
+.right
+  float: right
+
+
 body
   font-family: Verdana, Georgia, Helvetica, Arial
   font-size: 100%
