--- a/views/foto_page.haml
+++ b/views/foto_page.haml
@@ -12,6 +12,11 @@
     %a{ href: "/podcasts" }
       %span Podcast
       %img{ src: "/images/icons/icon_audio.png" }
+
+
+    %a.right{ href: "https://www.facebook.com/pages/RadioShout/137967656273296?sk=photos_stream" }
+      %span Foto FB
+      %img{ src: "/images/icons/icon_foto.png" }
   %h2 Foto
 
   .fiveapi_element{ 'data-type': 'collection', 'data-name': "foto" }
