--- a/views/la_radio.haml
+++ b/views/la_radio.haml
@@ -11,7 +11,12 @@
   %a{ href: "/podcasts" }
     %span Podcast
     %img{ src: "/images/icons/icon_audio.png" }
-    
+
+
+
+  %a.right{ href: "https://www.facebook.com/pages/RadioShout/137967656273296?sk=photos_stream" }
+    %span Foto FB
+    %img{ src: "/images/icons/icon_foto.png" }
 #img_gal
 
 .hidden
