--- a/views/podcast_page.haml
+++ b/views/podcast_page.haml
@@ -13,6 +13,10 @@
       %span Podcast
       %img{ src: "/images/icons/icon_audio.png" }
 
+
+    %a.right{ href: "https://www.facebook.com/pages/RadioShout/137967656273296?sk=photos_stream" }
+      %span Foto FB
+      %img{ src: "/images/icons/icon_foto.png" }
   %h2 Podcast
 
   .fiveapi_element{ 'data-type': 'collection', 'data-name': "podcasts" }
