--- a/sass/app.sass
+++ b/sass/app.sass
@@ -213,8 +213,6 @@ ul span
   width: 100%
 
 
-.img_box
-  width: 100%
 
 .text
   a
@@ -225,27 +223,23 @@ ul span
 .previews
   .article
     float: left
-    width: 26.8%
-    height: 151px
-    margin: 0 0 20px 0
-    overflow: hidden
-    position: relative
-    margin: 15px 3% 15px 3%
+    width: 29.3%
+    margin: 15px 2% 15px 2%
     img
       width: 100%
-      position: absolute
-      z-index: 1
     .title
-      position: absolute
-      z-index: 3
     .text
-      position: absolute
-      z-index: 2
-      top: 30px
-      width: 100%
-  //  color: transparent
-  //.article.articolo .text
-  // color: #000
+      overflow: hidden
+      height: 200px
+
+.img_box
+  overflow: hidden
+  height: 200px
+  position: relative
+  background: black
+  img
+    position: absolute
+
 
 .btn
   padding: 4px 12px
