--- a/sass/app.sass
+++ b/sass/app.sass
@@ -330,8 +330,16 @@ ul span
     float: none
     display: block
 
+
 .videos .article
   margin: 0 0 20px 0
+  .img_box
+    background: transparent
+  img
+    margin: 0 auto
+    float: none
+    display: block
+    position: relative
   iframe
     max-width: 700px
     height: 350px
