--- a/views/video_article.haml
+++ b/views/video_article.haml
@@ -4,7 +4,7 @@
   %h2
     %a{ href: link }= title
   .text
-    != haml.article_preview(text)
+    != text
   .article_infos
     .by
       = published_by
